chore: configure storybook

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,7 +1,7 @@
 <meta name="viewport"
-      content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+      content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
 <style>
-  body {
+  #root {
     font-family: 'Inter', Arial, Helvetica, Verdana, sans-serif;
   }
 </style>
